project(lab12)
add_executable(lab12 main_12.cpp Student.cpp Student.h GraduationDao.h GraduationDaoImpl.cpp GraduationDaoImpl.h GraduationService.h GraduationServiceImpl.cpp GraduationServiceImpl.h Settlement.h SettlementStatistics.h SettlementStatisticsIpml.cpp SettlementStatisticsIpml.h Settlement.cpp)
